remove console.log
