# code/logistics/public/swagger.json
@@ -170,28 +170,6 @@
 					"registration"
 				],
 				"type": "object"
-			},
-			"expectedBodyUpdateTruck": {
-				"properties": {
-					"autonomy": {
-						"type": "number",
-						"format": "double"
-					},
-					"capacity": {
-						"type": "number",
-						"format": "double"
-					},
-					"tare": {
-						"type": "number",
-						"format": "double"
-					}
-				},
-				"required": [
-					"autonomy",
-					"capacity",
-					"tare"
-				],
-				"type": "object"
 			}
 		},
 		"securitySchemes": {}
